syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package=".;proto";


service InventoryService {
    rpc SetInventory(GoodsInvInfo) returns (google.protobuf.Empty); // 设置库存
    rpc GetInventory(GoodsInvInfo) returns (GoodsInvInfo);// 获取库存
  // 我们一般买东西的时候喜欢从购物车中去买 事务
    rpc Sell(SellInfo) returns(google.protobuf.Empty); // 库存扣减
  // 归还
  rpc Reback(SellInfo) returns(google.protobuf.Empty); // 库存归还
}

message GoodsInvInfo{
  int32 goodsId = 1;
  int32 num = 2;
}

message SellInfo {
  repeated GoodsInvInfo goodsInvInfo = 1; // 商品库存信息
}